deploy/metrics/metrics-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metrics
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
    spec:
      containers:
      - name: metricsd
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
