deploy/metrics/metrics-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: metrics
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: metrics
          servicePort: 3000
        path: /metrics
    host: training-user-38.training.weave.works
status:
  loadBalancer: {}
